--- a/evently/profile/profileReady/mustache.html
+++ b/evently/profile/profileReady/mustache.html
@@ -1,11 +1,13 @@
 <div class="avatar">
   {{#gravatar_url}}<img src="{{gravatar_url}}"/>{{/gravatar_url}}
 </div>
+
 <p class="menu">
-  <a href="#/edit">Edit</a>
-  <a href="#/history">History</a>
-  <a href="#/upload">Upload File</a>
+  {{#is_editor}}
+    <a href="#/edit">Edit</a>
+    <a href="#/history">History</a>
+    <a href="#/upload">Upload File</a>
+  {{/is_editor}}
   <a href="/page/index">Home</a>
-  <a href="/pages/all">All Pages</a>
 </p>
 <div style="clear:left;"></div>
